removed html scroll bar to fix double scroll bar bug

--- a/frontend/src/admin/css/application.css
+++ b/frontend/src/admin/css/application.css
@@ -4,6 +4,7 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
