--- a/frontend/src/assets/styles.scss
+++ b/frontend/src/assets/styles.scss
@@ -11,5 +11,6 @@ body {
   right: 0;
   top: 0;
   width: 100%;
+  overflow-y: hidden !important;
   background: var(--color-bg);
 }
